<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="@dimen/margin_large"
    android:orientation="vertical">

    <TextView
        style="@style/TextAppearance.AppCompat.TitleMini"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal|top"
        android:layout_marginTop="@dimen/margin_medium"
        android:text="@string/weather" />

    <TextView
        style="@style/TextAppearance.AppCompat.TitleMini"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal|top"
        android:layout_marginTop="@dimen/margin_medium"
        android:text="@string/today"
        android:textSize="@dimen/text_size" />

    <TextView
        android:id="@+id/weatherTextView"
        style="@style/TextAppearance.AppCompat.TitleMini"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal|top"
        android:layout_marginTop="@dimen/margin_medium"
        android:text="@string/plus1"
        android:textSize="@dimen/text_size" />

    <TextView
        android:id="@+id/weatherSubText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal|top"
        android:text="@string/some_weather" />

    <TextView
        style="@style/TextAppearance.AppCompat.TitleMini"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal|top"
        android:layout_marginTop="@dimen/margin_medium"
        android:text="@string/recommendation" />

    <TextView
        android:id="@+id/recommendationTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal|top"
        android:layout_margin="@dimen/margin_medium"
        android:gravity="center"
        android:text="@string/some_recom" />

    <TextView
        style="@style/TextAppearance.AppCompat.TitleMini"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal|top"
        android:layout_marginTop="@dimen/margin_medium"
        android:text="@string/offers" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center">

        <ImageView
            android:id="@+id/arrowLeft"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/arrow_left"
            android:padding="@dimen/margin_small"/>

        <com.google.android.material.card.MaterialCardView
            style="@style/Widget.MaterialComponents.CardView.MyCard">
            <TextView
                android:id="@+id/cardTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="@string/some_card_text" />

        </com.google.android.material.card.MaterialCardView>

        <ImageView
            android:id="@+id/arrowRight"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/arrow_right"
            android:padding="@dimen/margin_small"/>
    </LinearLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/friendsFeedButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_large"
        android:text="@string/see_friends_feed"
        style="@style/Widget.MaterialComponents.Button.MyButton"/>

</LinearLayout>