<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="@dimen/margin_medium"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="@dimen/margin_medium">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                style="@style/TextAppearance.AppCompat.TitleMini"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/some_name"
                android:textStyle="normal" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/emailExample" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_medium"
                android:text="@string/follows" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/followers" />

        </LinearLayout>


        <ImageView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_gravity="center_vertical"
            android:layout_marginHorizontal="@dimen/margin_large"
            android:src="@drawable/profile_plug" />

        <ImageView
            android:id="@+id/changeSettingsRedirectButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="@dimen/margin_large"
            android:src="@drawable/arrow_right" />

    </LinearLayout>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:src="@drawable/line" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_gravity="center_vertical"
            android:layout_marginHorizontal="@dimen/margin_large"
            android:layout_marginVertical="@dimen/margin_large"
            android:src="@drawable/hanger"/>

        <TextView
            style="@style/TextAppearance.AppCompat.TitleMini"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginHorizontal="@dimen/margin_large"
            android:text="@string/my_wardrobe"
            android:textStyle="normal" />

        <ImageView
            android:id="@+id/wardrobeRedirectButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="@dimen/margin_large"
            android:src="@drawable/arrow_right" />

    </LinearLayout>


    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:src="@drawable/line" />


    <com.google.android.material.button.MaterialButton
        android:id="@+id/createRandomLookButton"
        style="@style/Widget.MaterialComponents.Button.MyButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="@dimen/margin_large"
        android:text="@string/createRandomLook" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/createCustomLookButton"
        style="@style/Widget.MaterialComponents.Button.MyButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/createCustomLook" />


</LinearLayout>