<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_margin="@dimen/margin_medium">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/log_in"
        style="@style/TextAppearance.AppCompat.Title"
        android:paddingTop="50dp"
        android:layout_gravity="center_horizontal|top" />

    <com.google.android.material.textfield.TextInputLayout
        android:layout_marginTop="@dimen/margin_large"
        android:id="@+id/emailTextField"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/email"

        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.MyBaseField">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_marginTop="@dimen/margin_medium"
        android:id="@+id/passwordTextField"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/password"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.MyBaseField">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:drawableEnd="@drawable/eye_close"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/signupButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_large"
        android:text="@string/log_in"
        style="@style/Widget.MaterialComponents.Button.MyButton"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_medium"
        android:text="@string/forget_password"
        android:textStyle="bold"
        android:textSize="14sp"
        android:textColor="@color/dark_purple"
        android:layout_gravity="center_horizontal|top" />

    <TextView
        android:layout_marginTop="@dimen/margin_large"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/or_sign_in_with"
        android:textStyle="bold"
        style="@style/Base.Widget.MaterialComponents.TextView.BaseText"
        android:layout_gravity="center_horizontal|top" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center">

        <ImageView
            android:id="@+id/vk_sign_up"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/vk_logo"
            android:padding="@dimen/margin_icons"/>

        <ImageView
            android:id="@+id/google_sign_up"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/google_logo"
            android:padding="@dimen/margin_icons"/>

        <ImageView
            android:id="@+id/yandex_sign_up"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/yandex_logo"
            android:padding="@dimen/margin_icons"/>
    </LinearLayout>

    <LinearLayout
        android:layout_marginTop="@dimen/margin_large"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dont_have_account_yet"/>

        <TextView
            android:id="@+id/signupRedirect"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/blue_links"
            android:layout_marginStart="5dp"
            android:text="@string/create_account"/>

    </LinearLayout>


</LinearLayout>